課題の作成

--- a/5-2/index.html
+++ b/5-2/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <div id="app">
-
+      <ul class="header-menu">
+        <li v-for="(item, i) in menus" :key="i" class="menu-item">
+          <a :href="item.path">{{ item.label }}</a>
+        </li>
+      </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="./script/script.js"></script>
